frontend/test/should_fail/graphof_return_value_mismatch_exec.grg
#using "graphof_model.gm"

rule r {
	n:N -e:E-> n;
	
	modify {
	---
		exec ( { i:int = graphof(n) } );
	}
}
